- added link to finished code

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -430,7 +430,8 @@ $ npm start
                                   This is a basic Electron application to demonstrate the ease of setting up and using the framework. Electron offers much more
                                   functionality that could allow you to make a wide range applications for all the popular OS types such as the ones previously mentioned.
                                   if this was interesting for you, I strongly recommend you further explore the Electron framework.
-                                </p>                               
+                                </p>
+                                <a href="https://github.com/danieljoeblack/ElectronDemo">Finished Code</a>                            
                           </div>
                           <!-- .end .wrap -->
                         </section>   
